[package]
name = "shirodl"
version = "0.1.1"
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
reqwest = "^0.11"
blake3 = "1.0.0"
async-std = "1.9.0"
tokio = { version = "1.9.0", features = ["full"] }
#content_inspector = "0.2.4"

[dev-dependencies]
clap = { version = "3.0.0-beta.2", features = ["suggestions", "color", "derive"]}
indicatif = "0.16.2"
console = "0.14.1"

[lib]
name = "shirodl"

[[example]]
name = "shirodl"