[package]
name = "shirodl"
description = "An async download library for massive batch of urls downloading."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Oyami-Srk/shirodl"
homepage = "https://github.com/Oyami-Srk/shirodl"
version = "0.1.4"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]
keywords = ["download", "async", "tool"]
categories = ["command-line-utilities", "web-programming::http-client", "asynchronous"]

[dependencies]
reqwest = { version = "^0.11", features = ["socks"]}
blake3 = "1.0.0"
async-std = "1.9.0"
tokio = { version = "1.9.0", features = ["full"] }
#content_inspector = "0.2.4"

[dev-dependencies]
clap = { version = "3.0.0-beta.5", features = ["suggestions", "color", "derive"]}
indicatif = "0.16.2"
console = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"

[lib]
name = "shirodl"

[[example]]
name = "shirodl"